# guipi26

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: benchmarks.yml  ci.yml  guardian.yml  publish.yml  scorecard.yml  security.yml
benchmarks/: README.md  bench_guipi26.py  bench_tkinter.py  plot_results.py  run_all.py
docs/: README.md  api-reference.md  collision-safety.md  components.md  forms.md  getting-started.md  layout.md  publishing.md  theming.md  widgets.md
examples/: dashboard.py
examples/contacts/: app.py
examples/enterprise/: app.py
examples/forms/: app.py
examples/widgets/: app.py
guipi26/: __init__.py  window.py
tools/: perf_gate.py  ui_safety_check.py
